# serial-timefreaq

./: .gitignore  Makefile  Makefile.am  README.md  Unit1.pas  autogen.sh  configure.ac  sr.c  sr.h  sr620.c  sr620.cpp  sr620.h  sr620.hpp  stf.c  stf.h  test.c  test.cpp  vch.c  vch.h  vch603.c  vch603.cpp  vch603.h  vch603.hpp
lib/: libserialport.la
lib/pkgconfig/: libserialport.pc
